# FacialRecognition

./: CMakeLists.txt  README.md  faceRecog.cpp
